# itmo-bigdata

./: .gitmodules  README.md
external-repos/itmo_big_data_2023_modified/: docker-compose.yml
hw1/: README.md  pyproject.toml
hw1/hadoop-notebook/: hw1.ipynb  test.txt
hw2/: README.md  pyproject.toml
hw2/hadoop-notebook/: hw2.ipynb
hw3/: README.md
hw3/kafka-notebook/: backoff_consumer.py  consumer.py  flink_job1.py  flink_job2.py  hw3.ipynb  producer.py
