[tool.poetry]
name = "hadoop-notebook"
version = "1.0.0"
description = "HW2 - ITMO University 'Big Data Processing and Analysis Systems' course"
authors = ["Daniel Kopecky <danielkopecky@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
pyspark = "^3.5.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
